# llm-secrets

./: .gitattributes  .gitignore  BUILD.md  LICENSE  LICENSE-APACHE  README.md
cli/: CLAUDE.md  README.md  scrt.ps1
cli/commands/: Auth.ps1  Decrypt.ps1  Encrypt.ps1  Help.ps1  Init.ps1  List.ps1  Logout.ps1  Run.ps1  Setup.ps1  Status.ps1  Version.ps1  View.ps1
cli/lib/: Logging.ps1  Output.ps1
crypto-core/: EnvCrypto.psm1  README.md  WindowsHelloAuth.cs
deployments/: VERIFICATION.md
desktop-app/: entitlements.mac.plist  forge.config.ts  package-lock.json  package.json  tsconfig.json
desktop-app/assets/: icon-preview.html
desktop-app/macos-helper/: Info.plist  TouchIDAuth.swift  build.sh
desktop-app/resources/macos/: TouchIDAuth
desktop-app/src/: index.css  index.html  index.ts  preload.ts  renderer.tsx
desktop-app/src/renderer/: App.tsx
disaster-recovery/: Decrypt-EnvFile.ps1  Decrypt-MasterKeyBackup.ps1  README.md  decrypt-env-file.sh  recover-master-key.sh
docs/: archive.html  blog.html  index.html
docs/blog/: llm-secrets-vs-1password-cli.html
legal/: SOFTWARE-LICENSE.md
scrt4/: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.hardened  Dockerfile.modular  README.md  SECURITY.md  docker-compose.yml  modules.manifest
scrt4/.github/workflows/: release.yml  (+5 more)
scrt4/auth-relay/: package.json  vercel.json
scrt4/daemon/: Cargo.toml  DESIGN.md  TODO.md
scrt4/daemon/src/: audit.rs  cli.rs  encrypted_inventory.rs  handlers.rs  keystore.rs  localhost.rs  main.rs  protocol.rs  remote.rs  sanitize.rs  session.rs  subprocess.rs  webauthn.rs
scrt4/daemon/tests/: test_backup_key_to_drive_envelope.sh  test_backup_vault_inventory.sh  test_cloud_crypt_ciphertext_gate.sh  test_wa_gate_before_backup_key.sh
scrt4/docs/: ARCHITECTURE-V0.2.md  AUTH-TRUST.md  CREATE-A-MODULE.md  FORMAL-VERIFICATION-INPUT.md  MODULES.md  ONBOARDING-HARDENED.md  RELEASE-TOPOLOGY.md  RELEASE.md  SECRETS.md  TCB.md  V0.2-BRANCH-README.md  cloud-crypt-core-changes.md
scrt4/install/: Caddyfile.install-block  README.md  deploy-setup.sh  modules-whitelist.json  scrt4-docker.sh  scrt4-native.sh  scrt4-native.sh.sha256  scrt4-uninstall.sh  scrt4-v2-docker.sh  scrt4-zenity-macos.sh  server-setup-release-user.sh  sync-scrt4-install.sh
scrt4/legal/: SOFTWARE-LICENSE.md
scrt4/scripts/: RELEASE.md  build-scrt4.sh  release.sh
wsl-daemon/: CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md
wsl-daemon/install/: install.ps1  install.sh  scrt-daemon.service  scrt.1  uninstall.sh
wsl-daemon/install/completions/: _scrt  scrt.bash
wsl-daemon/scripts/: build-release.sh
wsl-daemon/scrt-client/: Cargo.toml
wsl-daemon/scrt-client/src/: main.rs
wsl-daemon/src/: audit.rs  dpapi.rs  handlers.rs  keystore.rs  main.rs  protocol.rs  remote.rs  sanitize.rs  session.rs  subprocess.rs  totp.rs
wsl-daemon/tests/: integration.rs
(+38 files in other folders)
