[package]
name = "scrt3-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "net", "process", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
libc = "0.2"
hex = "0.4"
rand = "0.8"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
argon2 = "0.5"
aes-gcm = "0.10"
tempfile = "3"

[[bin]]
name = "scrt3-daemon"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
